# BEV2Seg_2

./: .gitignore  .gitmodules  README.md  changelog.md  hardware.txt  requirements.txt  test.toml
.devcontainer/: devcontainer.json
benchmark/: evaluate.py  model_selection.py
cluster/: generate_BEVDataset_from_NuImages.slurm  generate_NuImagesFormatted_from_NuImages.slurm  genrate_BEVDataset_from_NuImages.slurm  genrate_NuImagesFormatted_from_NuImages copy.slurm  test.slurm  train_segformer.slurm  train_segformer_bev.slurm  train_segformer_nu.slurm
config/: NuImages_conf.yml  carlota_alan.toml  my_scene.toml  scene-0061.toml  segformer.toml  segformer_bev.toml  segformer_nu.toml  test.toml
data/: class_balance.json  mean_iou.pt  model_evaluations.pkl  model_evaluations_testing.pkl  pipeline_3d_evaluations.pkl  pipeline_3d_evaluations_old.pkl  pipeline_mask_evaluations.pkl  setup1.json
datasets/: __init__.py  setup.py
docker/: Dockerfile  build-dockerfile.sh  docker-compose.yml  evaluate_segformer.sh  test_run.sh  train_segformer.sh
documents/: STRUCTURE.md  abbreviations.tex  abreviaturas.tex  abstract.tex  acknowledgements.tex  acronyms.tex  annexes.tex  appendix.tex  aux_experiments.txt  main.tex  references.bib  referencias.bib  title.tex
notebooks/: BEVDataset_class_balance.py  color_legend_plot.py  data_augmentations_for_BEVDataset.ipynb  depth_pro_test.ipynb  evaluate_3d_detections.ipynb  evaluate_bev2seg_2.ipynb  evaluate_bev2seg_2_old.ipynb  evaluate_masks.ipynb  (+5 more)
tracking/: CMakeLists.txt
tracking/src/: bev2seg_2_tracking.cpp  opencv_test.cpp
(+133 files in other folders)
